gcc-14.2.0/gcc/testsuite/gdc.test/compilable/imports/pkg11847/mod11847.d
version https://git-lfs.github.com/spec/v1
oid sha256:9081c6ca22e34379229357c65aaad17ac3b10089f612764fceb3d44e00e5469e
size 52
